Refactor to use project_id instead of team_id
